--- a/Resources/Prototypes/_CP14/Entities/Objects/Tools/bucket.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Tools/bucket.yml
@@ -25,6 +25,7 @@
     solutionName: bucket
     injectOnly: false
     ignoreMobs: true
+    ignoreClosed: false
     minTransferAmount: 1
     maxTransferAmount: 50
     transferAmount: 50
