minor random fixes

--- a/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
@@ -56,6 +56,7 @@
       - id: CP14BaseMop
       - id: CP14BaseBroom
       - id: CP14ModularIronPickaxe
+      - id: CP14ModularIronSickle
       - !type:GroupSelector
         children:
         - id: CP14CrystalLampBlueEmpty
@@ -63,6 +64,8 @@
       - id: CP14Rope
       - id: CP14Nail10
       - id: CP14EnergyCrystalSmall
+      - id: CP14CopperCoin5
+        weight: 0.5
       - id: CP14BaseSharpeningStone
       - !type:NestedSelector
         tableId: CP14RandomVials
@@ -81,6 +84,7 @@
       - id: CP14ClothingPantsSouthernMagician
       - id: CP14ClothingShirtMercenary
       - id: CP14ClothingShirtYellowWizard
+      - id: CP14FoodPotato
       - id: CP14Cloth10
     - !type:GroupSelector
       children:
