--- a/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
@@ -46,9 +46,9 @@
   components:
   - type: StorageFill
     contents:
-    - id: CP14CopperCoin1
-    - id: CP14CopperCoin1
-    - id: CP14CopperCoin1
-    - id: CP14CopperCoin1
-    - id: CP14CopperCoin1
+    - id: CP14SilverCoin5
     - id: CP14SilverCoin1
+    - id: CP14SilverCoin1
+    - id: CP14CopperCoin
+    - id: CP14CopperCoin
+    - id: CP14CopperCoin
