--- a/Resources/Prototypes/_CP14/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Storage/Crates/crates.yml
@@ -30,7 +30,7 @@
         acts: [ "Destruction" ]
   - type: Climbable
   - type: Sprite
-    snapCardinals: true
+    noRot: true
     drawdepth: Mobs
     layers:
       - map: [ base ]
@@ -60,8 +60,8 @@
     fixtures:
       fix1:
         shape:
-          !type:PhysShapeAabb
-          bounds: "-0.4,-0.4,0.4,0.4"
+          !type:PhysShapeCircle
+          radius: 0.45
         density: 255
         mask:
         - MachineMask
@@ -77,8 +77,8 @@
     fixtures:
       fix1:
         shape:
-          !type:PhysShapeAabb
-          bounds: "-0.3,-0.3,0.3,0.3"
+          !type:PhysShapeCircle
+          radius: 0.35
         density: 135
         mask:
         - MachineMask
