--- a/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
@@ -82,6 +82,8 @@
       - id: CP14ClothingShirtMercenary
       - id: CP14ClothingShirtYellowWizard
       - id: CP14Cloth10
+      - id: CP14CrayonWhite
+        weight: 2
     - !type:GroupSelector
       children:
       - id: CP14DyeYellow
