--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -12,6 +12,7 @@
   - CP14GeneralShoes
   - CP14GeneralBack
   - CP14GeneralTrinkets
+  - CP14GeneralKeys
 
 - type: roleLoadout
   id: JobCP14Alchemist
