--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T1_flash_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T1_flash_light.yml
@@ -33,6 +33,7 @@
     event: !type:CP14DelayedEntityWorldTargetActionEvent
       cooldown: 5
       castDelay: 0.5
+      breakOnMove: false
 
 - type: entity
   id: CP14RuneFlashLight
