add copper, bloodflowers and wild sage into comoss island

--- a/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
@@ -85,6 +85,7 @@
       - id: CP14ClothingShirtMercenary
       - id: CP14ClothingShirtYellowWizard
       - id: CP14FoodPotato
+      - id: CP14AgaricMushroom #dont eat
       - id: CP14Cloth10
       - id: CP14CrayonWhite
         weight: 2
