--- a/Resources/Prototypes/_CP14/Procedural/biome_template_caves.yml
+++ b/Resources/Prototypes/_CP14/Procedural/biome_template_caves.yml
@@ -70,3 +70,52 @@
         domainWarpAmp: 150
       entities:
         - CP14FloorWater
+
+- type: biomeTemplate
+  id: CP14CavesComossResources
+  layers:
+    - !type:BiomeMetaLayer
+      template: CP14CavesFloor
+    - !type:BiomeEntityLayer # lumishrooms
+      threshold: 0.8
+      noise:
+        seed: 8
+        noiseType: OpenSimplex2
+        fractalType: Ridged
+        frequency: 0.045
+        octaves: 3
+        lacunarity: 1.8
+        gain: 0.7
+        domainWarpType: OpenSimplex2
+        domainWarpAmp: 120
+      allowedTiles:
+        - CP14FloorBase
+      entities:
+        - CP14GatherableLumiMushroom
+    #Walls
+    - !type:BiomeEntityLayer
+      threshold: -0.75
+      invert: true
+      noise:
+        seed: 0
+        noiseType: Perlin
+        fractalType: Ridged
+        octaves: 1
+        frequency: 0.05
+        gain: 0.5
+      allowedTiles:
+        - CP14FloorBase
+      entities:
+        - CP14WallStone
+    #Copper
+    - !type:BiomeEntityLayer
+      threshold: 0.5
+      noise:
+        seed: 20
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 3
+      allowedTiles:
+        - CP14FloorBase
+      entities:
+        - CP14WallStoneCopperOre
