--- a/Resources/Prototypes/_CP14/Procedural/biome_template_grasslands.yml
+++ b/Resources/Prototypes/_CP14/Procedural/biome_template_grasslands.yml
@@ -280,3 +280,96 @@
       entities:
         - CP14FloorWater
     # Lakes end
+
+- type: biomeTemplate
+  id: CP14GrasslandComossResources
+  layers:
+    - !type:BiomeMetaLayer
+      template: CP14Grassland
+    - !type:BiomeEntityLayer # blood flowers
+      threshold: 0.7
+      noise:
+        seed: 12
+        noiseType: OpenSimplex2
+        fractalType: Ridged
+        frequency: 0.05
+        octaves: 3
+        lacunarity: 1.8
+        gain: 0.7
+        domainWarpType: OpenSimplex2
+        domainWarpAmp: 120
+      allowedTiles:
+        - CP14FloorGrass
+        - CP14FloorGrassLight
+        - CP14FloorGrassTall
+      entities:
+        - CP14GatherableBloodFlower
+    - !type:BiomeEntityLayer # wild sage
+      threshold: 0.7
+      noise:
+        seed: 23
+        noiseType: OpenSimplex2
+        fractalType: Ridged
+        frequency: 0.05
+        octaves: 3
+        lacunarity: 1.8
+        gain: 0.7
+        domainWarpType: OpenSimplex2
+        domainWarpAmp: 120
+      allowedTiles:
+        - CP14FloorGrass
+        - CP14FloorGrassLight
+        - CP14FloorGrassTall
+      entities:
+        - CP14GatherableWildSage
+    - !type:BiomeMetaLayer
+      template: CP14GrasslandForest
+      threshold: 0.2
+      noise:
+        seed: 18
+        frequency: 0.02
+        fractalType: None
+    - !type:BiomeMetaLayer
+      template: CP14GrasslandHills
+      threshold: 0.4
+      noise:
+        seed: 14
+        frequency: 0.02
+        fractalType: None
+    # Lakes start
+    - !type:BiomeTileLayer
+      tile: CP14FloorSand
+      threshold: 0.55
+      noise:
+        seed: 14
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 0.01
+        domainWarpType: OpenSimplex2
+        domainWarpAmp: 150
+    - !type:BiomeTileLayer
+      tile: CP14FloorDirt
+      threshold: 0.68
+      noise:
+        seed: 14
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 0.01
+        domainWarpType: OpenSimplex2
+        domainWarpAmp: 150
+    - !type:BiomeEntityLayer
+      allowedTiles:
+        - CP14FloorDirt
+        - CP14FloorSand
+      threshold: 0.6
+      noise:
+        seed: 14
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 0.01
+        domainWarpType: OpenSimplex2
+        domainWarpAmp: 150
+      entities:
+        - CP14FloorWater
+    # Lakes end
+  
