--- a/Resources/Maps/_CP14/Ships/cargo_shuttle.yml
+++ b/Resources/Maps/_CP14/Ships/cargo_shuttle.yml
@@ -93,6 +93,39 @@ entities:
       rot: 3.141592653589793 rad
       pos: 0.5,-3.5
       parent: 1
+- proto: CP14BlueBottle
+  entities:
+  - uid: 73
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 1.1868525,4.558953
+      parent: 1
+- proto: CP14ChairWooden
+  entities:
+  - uid: 39
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 1.4904509,1.7075868
+      parent: 1
+  - uid: 69
+    components:
+    - type: Transform
+      pos: 1.4735842,3.462273
+      parent: 1
+  - uid: 70
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 0.495323,6.3642545
+      parent: 1
+  - uid: 71
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 0.4109906,5.4531674
+      parent: 1
 - proto: CP14CurtainsRedOpened
   entities:
   - uid: 22
@@ -153,12 +186,6 @@ entities:
       parent: 1
 - proto: CP14FenceWoodSmallStraight
   entities:
-  - uid: 32
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -1.5,3.5
-      parent: 1
   - uid: 35
     components:
     - type: Transform
@@ -183,6 +210,32 @@ entities:
       rot: 3.141592653589793 rad
       pos: 0.5,6.5
       parent: 1
+  - uid: 59
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 2.5,2.5
+      parent: 1
+  - uid: 63
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 2.5,1.5
+      parent: 1
+  - uid: 76
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -1.5,1.5
+      parent: 1
+- proto: CP14GreenBottle2
+  entities:
+  - uid: 75
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 1.0687864,6.6510777
+      parent: 1
 - proto: CP14IronDoorBankStaff
   entities:
   - uid: 50
@@ -190,24 +243,43 @@ entities:
     - type: Transform
       pos: 0.5,0.5
       parent: 1
+- proto: CP14OrangeBottle
+  entities:
+  - uid: 72
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 0.9675874,4.289
+      parent: 1
 - proto: CP14PaperFolderRed
   entities:
-  - uid: 63
+  - uid: 58
     components:
     - type: Transform
-      pos: -0.34691465,6.6029224
+      rot: 1.5707963267948966 rad
+      pos: 2.2494469,2.1800027
       parent: 1
-  - uid: 64
+  - uid: 68
     components:
     - type: Transform
-      pos: -0.50438666,6.4117675
+      rot: 1.5707963267948966 rad
+      pos: 2.4349785,2.4162087
       parent: 1
 - proto: CP14PenFeather
   entities:
-  - uid: 65
+  - uid: 52
     components:
     - type: Transform
-      pos: -0.34691465,6.0294585
+      rot: 1.5707963267948966 rad
+      pos: 2.300046,1.6063542
+      parent: 1
+- proto: CP14RedBottle
+  entities:
+  - uid: 74
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 1.4061184,4.289
       parent: 1
 - proto: CP14ShuttleWingBigL
   entities:
@@ -249,41 +321,35 @@ entities:
       parent: 1
 - proto: CP14TableWoodenCounter
   entities:
-  - uid: 39
+  - uid: 32
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 0.5,7.5
+      rot: 1.5707963267948966 rad
+      pos: -1.5,4.5
       parent: 1
   - uid: 51
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -0.5,5.5
-      parent: 1
-  - uid: 52
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -0.5,6.5
+      rot: 1.5707963267948966 rad
+      pos: 0.5,7.5
       parent: 1
   - uid: 53
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.5,5.5
+      rot: 1.5707963267948966 rad
+      pos: 1.5,4.5
       parent: 1
   - uid: 54
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.5,6.5
+      rot: 1.5707963267948966 rad
+      pos: 1.5,5.5
       parent: 1
   - uid: 56
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -1.5,4.5
+      rot: 1.5707963267948966 rad
+      pos: 1.5,6.5
       parent: 1
   - uid: 61
     components:
@@ -291,19 +357,29 @@ entities:
       rot: 3.141592653589793 rad
       pos: 2.5,4.5
       parent: 1
-- proto: CP14TravelingShop
-  entities:
-  - uid: 58
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -1.5,3.5
-      parent: 1
-  - uid: 59
+  - uid: 64
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 2.5,3.5
+      parent: 1
+  - uid: 65
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 2.5,2.5
+      parent: 1
+  - uid: 66
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 2.5,1.5
+      parent: 1
+  - uid: 77
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -1.5,1.5
       parent: 1
 - proto: CP14WallMarbleBrick
   entities:
