--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T0_cure_poison.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T0_cure_poison.yml
@@ -25,6 +25,7 @@
         damage:
           types:
             Poison: -10
+            Bloodloss: -10
             Caustic: -10
       - !type:Jitter
       - !type:ModifyBleedAmount
