--- a/Resources/Prototypes/_CP14/Entities/Structures/Doors/Locked/blacksmith.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Doors/Locked/blacksmith.yml
@@ -1,7 +1,7 @@
 - type: entity
   parent: CP14IronDoor
   id: CP14IronDoorBlacksmith1
-  suffix: Blacksmith
+  suffix: Blacksmith 1
   components:
   - type: CP14Lock
     autoGenerateShape: Blacksmith1
@@ -13,12 +13,12 @@
   - CP14IronDoorBlacksmith1
   - CP14IronDoorMirrored
   id: CP14IronDoorMirroredBlacksmith1
-  suffix: Blacksmith, Mirrored
+  suffix: Blacksmith 1, Mirrored
 
 - type: entity
   parent: CP14IronDoor
   id: CP14IronDoorBlacksmith2
-  suffix: Blacksmith
+  suffix: Blacksmith 2
   components:
   - type: CP14Lock
     autoGenerateShape: Blacksmith2
@@ -30,4 +30,4 @@
   - CP14IronDoorBlacksmith2
   - CP14IronDoorMirrored
   id: CP14IronDoorMirroredBlacksmith2
-  suffix: Blacksmith, Mirrored
+  suffix: Blacksmith 2, Mirrored
