--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/sword.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/sword.yml
@@ -49,6 +49,28 @@
     - BaseWeaponIron
 
 - type: modularPart
+  id: BladeGoldSword
+  targetSlot: Blade
+  sourcePart: CP14ModularBladeGoldSword
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/gold_sword.rsi
+  modifiers:
+  - !type:Inherit
+    copyFrom:
+    - BaseBladeSword
+    - BaseWeaponGold
+
+- type: modularPart
+  id: BladeCopperSword
+  targetSlot: Blade
+  sourcePart: CP14ModularBladeCopperSword
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/copper_sword.rsi
+  modifiers:
+  - !type:Inherit
+    copyFrom:
+    - BaseBladeSword
+    - BaseWeaponCopper
+
+- type: modularPart
   id: BladeBoneSword
   targetSlot: Blade
   sourcePart: CP14ModularBladeBoneSword
