--- a/Resources/Prototypes/_CP14/Recipes/Workbench/anvil.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/anvil.yml
@@ -162,6 +162,14 @@
   result: CP14ModularBladeIronSickle
 
 - type: CP14Recipe
+  id: CP14ModularBladeCopperSickle
+  tag: CP14RecipeAnvil
+  craftTime: 2
+  stacks:
+    CP14CopperBar: 1
+  result: CP14ModularBladeCopperSickle
+
+- type: CP14Recipe
   id: CP14ModularBladeGoldSickle
   tag: CP14RecipeAnvil
   craftTime: 2
