--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/sword.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/sword.yml
@@ -68,7 +68,7 @@
   - !type:Inherit
     copyFrom:
     - BaseBladeSword
-    - BaseWeaponCoppe
+    - BaseWeaponCopper
 
 - type: modularPart
   id: BladeBoneSword
