--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -34,53 +34,53 @@
     - NuclearOperative
     - SyndicateAgent
     - CentralCommand
-  - type: UserInterface
-    interfaces:
-      enum.SolarControlConsoleUiKey.Key:
-        type: SolarControlConsoleBoundUserInterface
-      enum.CommunicationsConsoleUiKey.Key:
-        type: CommunicationsConsoleBoundUserInterface
-      enum.RadarConsoleUiKey.Key:
-        type: RadarConsoleBoundUserInterface
-      enum.CargoConsoleUiKey.Orders:
-        type: CargoOrderConsoleBoundUserInterface
-      enum.CrewMonitoringUIKey.Key:
-        type: CrewMonitoringBoundUserInterface
-      enum.GeneralStationRecordConsoleKey.Key:
-      # who the fuck named this bruh
-        type: GeneralStationRecordConsoleBoundUserInterface
-  - type: IntrinsicUI
-    uis:
-      enum.SolarControlConsoleUiKey.Key:
-        toggleAction: ActionAGhostShowSolar
-      enum.CommunicationsConsoleUiKey.Key:
-        toggleAction: ActionAGhostShowCommunications
-      enum.RadarConsoleUiKey.Key:
-        toggleAction: ActionAGhostShowRadar
-      enum.CargoConsoleUiKey.Orders:
-        toggleAction: ActionAGhostShowCargo
-      enum.CrewMonitoringUIKey.Key:
-        toggleAction: ActionAGhostShowCrewMonitoring
-      enum.GeneralStationRecordConsoleKey.Key:
-        toggleAction: ActionAGhostShowStationRecords
-  - type: SolarControlConsole # look ma i AM the computer!
-  - type: CommunicationsConsole
-    title: comms-console-announcement-title-centcom
-    color: "#228b22"
-  - type: RadarConsole
-    followEntity: true
-  - type: CargoOrderConsole
-  - type: BankClient
-  - type: CrewMonitoringConsole
-  - type: GeneralStationRecordConsole
-    canDeleteEntries: true
-  - type: DeviceNetwork
-    deviceNetId: Wireless
-    receiveFrequencyId: CrewMonitor
-    transmitFrequencyId: ShuttleTimer
-  - type: WirelessNetworkConnection
-    range: 500
-  - type: StationLimitedNetwork
+  #- type: UserInterface
+  #  interfaces:
+  #    enum.SolarControlConsoleUiKey.Key:
+  #      type: SolarControlConsoleBoundUserInterface
+  #    enum.CommunicationsConsoleUiKey.Key:
+  #      type: CommunicationsConsoleBoundUserInterface
+  #    enum.RadarConsoleUiKey.Key:
+  #      type: RadarConsoleBoundUserInterface
+  #    enum.CargoConsoleUiKey.Orders:
+  #      type: CargoOrderConsoleBoundUserInterface
+  #    enum.CrewMonitoringUIKey.Key:
+  #      type: CrewMonitoringBoundUserInterface
+  #    enum.GeneralStationRecordConsoleKey.Key:
+  #    # who the fuck named this bruh
+  #      type: GeneralStationRecordConsoleBoundUserInterface
+  #- type: IntrinsicUI
+  #  uis:
+  #    enum.SolarControlConsoleUiKey.Key:
+  #      toggleAction: ActionAGhostShowSolar
+  #    enum.CommunicationsConsoleUiKey.Key:
+  #      toggleAction: ActionAGhostShowCommunications
+  #    enum.RadarConsoleUiKey.Key:
+  #      toggleAction: ActionAGhostShowRadar
+  #    enum.CargoConsoleUiKey.Orders:
+  #      toggleAction: ActionAGhostShowCargo
+  #    enum.CrewMonitoringUIKey.Key:
+  #      toggleAction: ActionAGhostShowCrewMonitoring
+  #    enum.GeneralStationRecordConsoleKey.Key:
+  #      toggleAction: ActionAGhostShowStationRecords
+  #- type: SolarControlConsole # look ma i AM the computer!
+  #- type: CommunicationsConsole
+  #  title: comms-console-announcement-title-centcom
+  #  color: "#228b22"
+  #- type: RadarConsole
+  #  followEntity: true
+  #- type: CargoOrderConsole
+  #- type: BankClient
+  #- type: CrewMonitoringConsole
+  #- type: GeneralStationRecordConsole
+  #  canDeleteEntries: true
+  #- type: DeviceNetwork
+  #  deviceNetId: Wireless
+  #  receiveFrequencyId: CrewMonitor
+  #  transmitFrequencyId: ShuttleTimer
+  #- type: WirelessNetworkConnection
+  #  range: 500
+  #- type: StationLimitedNetwork
   - type: Thieving
     stripTimeReduction: 9999
     stealthy: true
