update crystals modalrPart structure

--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Magic/magic_crystal.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Magic/magic_crystal.yml
@@ -20,6 +20,7 @@
 - type: entity
   id: CP14MagicCrystalSpellSphereOfLight
   parent: CP14MagicCrystalBase
+  suffix: SphereOfLight
   components:
   - type: Sprite
     color: "#FFFF00"
