--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Magic/ring.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Magic/ring.yml
@@ -4,6 +4,7 @@
   id: CP14ClothingMagicRingBase
   categories: [ ForkFiltered ]
   abstract: true
+  name: ring
   components:
   - type: Item
     size: Tiny
