comoss zlevel sewers

--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/pallets.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/pallets.yml
@@ -12,6 +12,9 @@
     drawdepth: FloorTiles
   - type: Transform
     anchored: true
+  - type: Tag
+    tags:
+      - Catwalk
 
 - type: entity
   id: CP14WoodenPallet
